# MikroCLAW

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  MANUAL_BOOK.md  README.md  bootstrap.ps1  bootstrap.sh  install.bat  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
.claude/skills/mikrotik-backup-snapshot/: SKILL.md
.claude/skills/mikrotik-chronicle/: SKILL.md
.claude/skills/mikrotik-concierge/: SKILL.md
.claude/skills/mikrotik-firewall-audit/: SKILL.md
.claude/skills/mikrotik-health-check/: SKILL.md
.claude/skills/mikrotik-network-overview/: SKILL.md
.claude/skills/mikrotik-replay/: SKILL.md
.claude/skills/mikrotik-role-detect/: SKILL.md
.claude/skills/mikrotik-security-audit/: SKILL.md
.claude/skills/mikrotik-sentinel/: SKILL.md
.claude/skills/mikrotik-troubleshoot/: SKILL.md
.claude/skills/mikrotik-twin/: SKILL.md
docs/: FITUR.md
src/mikroclaw/: __init__.py  chronicle.py  client.py  concierge.py  config.py  roles.py  sentinel.py  server.py  storage.py  twin.py
src/mikroclaw/web/: __init__.py  __main__.py  actions.py  analyst.py  app.py  history.py  poller.py
src/mikroclaw/web/static/: index.html
tests/: conftest.py  test_actions.py  test_analyst.py  test_app.py  test_chronicle.py  test_client.py  test_concierge.py  test_forecast.py  test_history.py  test_poller_helpers.py  test_roles.py  test_sentinel.py  test_server_smart.py  test_twin.py
