[project]
name = "mikroclaw"
version = "0.1.0"
description = "MCP server untuk mengakses & mengelola MikroTik RouterOS (REST API v7) dari Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
mikroclaw = "mikroclaw.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mikroclaw"]
