[project]
name = "mikroclaw"
version = "1.6.0"
description = "MCP server untuk mengakses & mengelola MikroTik RouterOS (REST API v7) dari Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "starlette>=0.37",
    "sse-starlette>=1.8",
    "uvicorn>=0.27",
]

[project.scripts]
mikroclaw = "mikroclaw.server:main"
mikroclaw-web = "mikroclaw.web.app:main"

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mikroclaw"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
